<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo_formulario"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitulo" />

    <EditText
        android:id="@+id/editEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_edad"
        android:inputType="number"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNombre" />

    <TextView
        android:id="@+id/textProfesiones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_profesion"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEdad" />

    <RadioGroup
        android:id="@+id/radioGrupoProfesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textProfesiones">

        <RadioButton
            android:id="@+id/radioEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesion_estudiante" />

        <RadioButton
            android:id="@+id/radioDesarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesion_desarrollador" />

        <RadioButton
            android:id="@+id/radioProfesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesion_profesor" />
    </RadioGroup>

    <Button
        android:id="@+id/botonPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/boton_generar_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGrupoProfesion" />

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:lineSpacingExtra="2dp"
        android:minHeight="72dp"
        android:text="@string/perfil_inicial"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonPerfil" />

</androidx.constraintlayout.widget.ConstraintLayout>
